# test-vcpkg-flint3

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp  test.c  vcpkg.json
ports/flint/: portfile.cmake  vcpkg.json
